<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:weightSum="20"
	    android:orientation="vertical"
	    android:gravity="center">
        
        <!-- 显示当前订单号和桌子号 -->
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="2"
	        android:layout_margin="8dp"
	        android:orientation="horizontal"
	        android:weightSum="10"
	        android:gravity="center">
	        
	        <TextView 
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="3"
	            android:gravity="center"
	            android:text="@string/activity_union_table_current_orderid"
	            android:textSize="12dp"
	            android:layout_marginRight="2.5dp"/>
	        
	        <TextView 
	            android:id="@+id/union_table_orderid"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="2"
	            android:gravity="center"
	            android:textSize="20dp"
	            android:layout_marginRight="2.5dp"/>
	        
	        <TextView 
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="3"
	            android:gravity="center"
	            android:text="@string/activity_union_table_current_tableid"
	            android:textSize="12dp"
	            android:layout_marginRight="2.5dp"/>
	        
	        <TextView 
	            android:id="@+id/union_table_current_tableid"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="2"
	            android:gravity="center"
	            android:textSize="20dp"
	            android:layout_marginRight="2.5dp"/>
	        
	    </LinearLayout>
	    
	    <!-- 输入布局，输入需要合并的桌子号-->
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="2"
	        android:layout_margin="8dp"
	        android:orientation="horizontal"
	        android:weightSum="10"
	        android:gravity="center">
	        
	        <TextView 
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="4"
	            android:gravity="center"
	            android:text="@string/activity_union_table_target_tableid"
	            android:textSize="20dp"
	            android:layout_marginRight="2.5dp"/>
	        
	        <EditText android:id="@+id/union_table_tableid_to_union"
                android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="6"
	            android:inputType="text"
	            android:textSize="25dp"/>
	        
	    </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
